--- a/Contents/Maps/index.html
+++ b/Contents/Maps/index.html
@@ -84,17 +84,17 @@
             <!--<img id="img" src="images/lower-level-map.png" onmousedown ="return false" width="1015">-->
             <img src="images/O-Lower Level.png" onmousedown ="return false" width="1015" usemap="#image-map">
           <map name="image-map">
-              <area src="images/O-Water-Resourcesp-Commissioner.png" alt="Water Resources Comissioner" title="Water Resources Comissioner" coords="457,350,511,349,514,311,570,312,570,431,457,431,457,410,466,399,464,392,457,392" shape="poly">
-              <area src="images/O-County-Treasurer.png" target="" alt="County Treasure" title="County Treasure"  coords="457,433,571,433,570,549,493,549,491,557,474,556,468,547,457,546" shape="poly">
-              <area src="images/o-Register-of-Deeds.png"  target="" alt="Clerk/Register of Deeds" title="Clerk/Register of Deeds"  coords="359,333,438,334,437,536,424,536,423,551,399,551,399,623,321,620,320,545,359,545" shape="poly">
-              <area src="images/O-Equalization.png" target="" alt="Equalization/Property" title="Equalization/Property" coords="454,621,542,621,541,741,438,740,437,655,454,655" shape="poly">
-              <area src="images/O-MSU-Extension.png" target="" alt="MSU Extension" title="MSU Extension" coords="236,635,320,634,321,623,389,623,389,672,416,672,416,682,421,687,421,724,277,724,277,702,236,702" shape="poly">
-              <area src="images/O-Break-Room.png" target="" alt="Break Room" title="Break Room"  coords="235,704,275,702,273,748,273,759,276,765,276,833,267,842,218,843,218,808,202,806,201,766,234,765" shape="poly">
-              <area src="images/O-IT-Service-Desk.png" target="" alt="IT Service Desk" title="IT Service Desk" coords="218,857,267,857,277,867,277,950,217,950" shape="poly">
-              <area src="images/O-Facilities-Maintenance.png" target="" alt="Facilities Maintenance" title="Facilities Maintenance"  coords="90,817,178,818,178,838,201,839,201,893,216,893,216,951,110,951,110,922,65,921,64,890,91,890" shape="poly">
-              <area src="images/O-Emergency-Management.png" target="" alt="Emergency Management" title="Emergency Management"  coords="293,935,303,937,303,943,337,943,338,972,359,972,360,1075,293,1074" shape="poly">
-              <area src="images/O-IT-Computer-Training.png" target="" alt="IT Computer Training" title="IT Computer Training" coords="293,863,307,862,308,857,351,858,351,913,307,911,307,904,293,907" shape="poly">
-              <area src="images/O-Conference-Room-E.png" target="" alt="Conference Room E" title="Conference Room E" coords="352,858,416,860,414,865,435,863,436,888,403,887,361,930,355,922,352,910" shape="poly">
+              <area src="images/lower-level/O-Water-Resources-Commissioner.png" alt="Water Resources Comissioner" title="Water Resources Comissioner" coords="457,350,511,349,514,311,570,312,570,431,457,431,457,410,466,399,464,392,457,392" shape="poly">
+              <area src="images/lower-level/O-County-Treasurer.png" target="" alt="County Treasure" title="County Treasure"  coords="457,433,571,433,570,549,493,549,491,557,474,556,468,547,457,546" shape="poly">
+              <area src="images/lower-level/o-Register-of-Deeds.png"  target="" alt="Clerk/Register of Deeds" title="Clerk/Register of Deeds"  coords="359,333,438,334,437,536,424,536,423,551,399,551,399,623,321,620,320,545,359,545" shape="poly">
+              <area src="images/lower-level/O-Equalization.png" target="" alt="Equalization/Property" title="Equalization/Property" coords="454,621,542,621,541,741,438,740,437,655,454,655" shape="poly">
+              <area src="images/lower-level/O-MSU-Extension.png" target="" alt="MSU Extension" title="MSU Extension" coords="236,635,320,634,321,623,389,623,389,672,416,672,416,682,421,687,421,724,277,724,277,702,236,702" shape="poly">
+              <area src="images/lower-level/O-Break-Room.png" target="" alt="Break Room" title="Break Room"  coords="235,704,275,702,273,748,273,759,276,765,276,833,267,842,218,843,218,808,202,806,201,766,234,765" shape="poly">
+              <area src="images/lower-level/O-IT-Service-Desk.png" target="" alt="IT Service Desk" title="IT Service Desk" coords="218,857,267,857,277,867,277,950,217,950" shape="poly">
+              <area src="images/lower-level/O-Facilities-Maintenance.png" target="" alt="Facilities Maintenance" title="Facilities Maintenance"  coords="90,817,178,818,178,838,201,839,201,893,216,893,216,951,110,951,110,922,65,921,64,890,91,890" shape="poly">
+              <area src="images/lower-level/O-Emergency-Management.png" target="" alt="Emergency Management" title="Emergency Management"  coords="293,935,303,937,303,943,337,943,338,972,359,972,360,1075,293,1074" shape="poly">
+              <area src="images/lower-level/O-IT-Computer-Training.png" target="" alt="IT Computer Training" title="IT Computer Training" coords="293,863,307,862,308,857,351,858,351,913,307,911,307,904,293,907" shape="poly">
+              <area src="images/lower-level/O-Conference-Room-E.png" target="" alt="Conference Room E" title="Conference Room E" coords="352,858,416,860,414,865,435,863,436,888,403,887,361,930,355,922,352,910" shape="poly">
               <!--<area src="images/" target="" alt="Elevator to upper level" title="Elevator to upper level" coords="324,932,338,931,337,941,324,941" shape="poly">
               <area src="images/" target="" alt="Elevator to upper level" title="Elevator to upper level"  coords="424,538,437,539,437,550,424,550" shape="poly">-->
           </map>
