--- a/Contents/Info/index.html
+++ b/Contents/Info/index.html
@@ -1186,6 +1186,7 @@ $(function(){
   }
     .panel-title>a{
         color: white;
+        display: block;
     }
     #map{
             /* position: absolute; */
