Popup Close button fixed
Popup Close button fixed

--- a/Contents/Info/index.html
+++ b/Contents/Info/index.html
@@ -1187,6 +1187,7 @@ $(function(){
     .panel-title>a{
         color: white;
         display: block;
+        padding: 10px 0;
     }
     #map{
             /* position: absolute; */
