--- a/Contents/Info/index.html
+++ b/Contents/Info/index.html
@@ -126,7 +126,7 @@
                         </div>
                         <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
                             <div class="panel-body">
-                                <span id="map" src="images/maps-new/O-Sheriff.png"><img src="images/map.png" width="60"> </span>
+                                <span id="map" src="images/maps-new/O-Sheriff.png"><img src="images/map.png" width="60">Click here for maps</span>
                                 <p>Sherrif's Office</p>
                             </div>
                         </div>
@@ -1192,8 +1192,9 @@ $(function(){
     #map{
             /* position: absolute; */
     /* right: 30px; */
-    float: left;
-    margin: -5px 15px 0 0;
+    float: right;
+    color: #000;
+    /*margin: -5px 15px 0 0;*/
     }
     .panel-default>.panel-heading+.panel-collapse>.panel-body p{
         color: black;
