Time/weather and timer update
Time/weather and timer update

--- a/Contents/Info/index.html
+++ b/Contents/Info/index.html
@@ -83,6 +83,11 @@
 </header>
 
 <nav>
+    <div class="dateTime">
+      <span id="content_date"></span>
+      <span id="content_air"></span> | <span id="temp"></span>
+      <img src="" id="image-zoom">
+    </div>
     <span class="home-text" onclick="FC_ContentsCall('Home')"><img class="home" src="../../assets/icons/home.png" alt="home" >Home</span>
 </nav>
 
