--- a/main.htm
+++ b/main.htm
@@ -60,7 +60,11 @@
 </header>
 
 <nav>
-
+<div class="dateTime">
+      <span id="content_date"></span>
+      <span id="content_air"></span> | <span id="temp"></span>
+      <img src="" id="image-zoom">
+    </div>
 </nav>
 
 <section class="main-content">
