--- a/Contents/Maps/index.html
+++ b/Contents/Maps/index.html
@@ -338,6 +338,7 @@
 
 <script language="javascript" type="text/javascript">
     window.history.forward();
+    //var t=setInterval(ShowTime(),2000);
 </script>
 
 <script
